--- a/static/CSS/estiloevent.css
+++ b/static/CSS/estiloevent.css
@@ -2,6 +2,8 @@
     margin-top: 25px;
     border-radius: 50px;
     background-color: rgba(243, 217, 246);
+    margin-top: 50px;
+    margin-bottom: 121px;
 }
 
 /*------------------------RESPONSIVE--------------------------*/
