--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="{{ url_for('static',filename='CSS/estilofooter.css') }}">
     <link rel="stylesheet" href="{{ url_for('static',filename='CSS/estiloevent.css') }}">
     <link rel="stylesheet" href="{{ url_for('static',filename='CSS/estilosmiseve.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static',filename='CSS/estiloregistro.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static',filename='CSS/style_register_login.css') }}">
 
 
 </head>
