--- a/templates/cont_myevent.html
+++ b/templates/cont_myevent.html
@@ -1,4 +1,5 @@
-{% from "macro.html" import my_event %}
+{% from "macro.html" import show_event %}
+{% from "form_macros.html" import show_field ,show_radio_field, show_submit_field, show_field_filter %}
 {% extends "index.html" %}
 {% block contenido %}
 <div class="container-fluid">
