--- a/templates/login.html
+++ b/templates/login.html
@@ -3,21 +3,27 @@
 {% block contenido %}
     <body background="{{ url_for('static', filename = 'Imagenes/background.jpg') }}">
     <div class="row">
-        <div class="col-lg-6 col-md-5 col-sm-5">
-            <div class="jumbotron">
+        <div class="col-lg-7 col-md-6 col-sm-6">
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-4">
+            <div class="jumbotron" id="jumbo-login">
                 <form method="POST" action="{{ url_for('loginuser') }}" enctype="multipart/form-data">
                     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+                    <h1 class="title-login">Iniciar Sesion</h1>
+                    <hr />
                     <div class="form-row">
-                        <div class="col-lg-8 col-md-8 mb-6">
-                            {{ show_field(formLogin.emailLogin, class='form-control' , placeholder="Correo Electronico") }}
+                        <div class="col-lg-8 col-md-8 col-sm-12 col-xs-8 offset-2 float-md-center">
+                            {{ show_field(formLogin.emailLogin, class='form-control email-login',placeholder="example@gmail.com") }}
                         </div>
                     </div>
                     <div class="form-row">
-                        <div class=" col-lg-4 col-md-3 mb-3">
-                            {{ show_field(formLogin.passwordLogin, class='form-control' , placeholder="Contraseña") }}
+                        <div class=" col-lg-5 col-md-5 col-sm-5 col-xs-5 offset-2 float-md-center">
+                            {{ show_field(formLogin.passwordLogin, class='form-control password-login') }}
                         </div>
                     </div>
-                    {{ show_submit_field(formLogin.submitLogin , class='btn btn-success') }}
+                    <hr />
+                    <a href="">Olvidaste la contraseña?</a>
+                    {{ show_submit_field(formLogin.submitLogin , class='btn btn-login') }}
                 </form>
             </div>
 
