--- a/templates/register.html
+++ b/templates/register.html
@@ -4,34 +4,38 @@
     <body background="{{ url_for('static', filename = 'Imagenes/background.jpg') }}">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-lg-6 col-md-5 col-sm-5">
+            <div class="col-lg-6 col-md-6 col-sm-6">
             </div>
-            <div class="col-lg-4 col-md-7 col-sm-5">
+            <div class="col-lg-5 col-md-5 col-sm-5">
                 <div class="jumbotron" id="jumbo-register">
                     <form method="POST" action="{{ url_for('insert') }}" enctype="multipart/form-data">
                         <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+                        <h1 class="title-register">Crear Cuenta</h1>
+                        <hr />
                         <div class="form-row">
-                            <div class="col-lg-4 col-md-4 mb-3">
+                            <div class="col-lg-5 col-md-5 mb-12 offset-1 float-md-center">
                                 {{ show_field(formRegister.nombre, class='form-control name') }}
                             </div>
-                            <div class="col-lg-4 col-md-4 mb-3">
+                            <div class="col-lg-5 col-md-5 mb-12">
                                 {{ show_field(formRegister.apellido, class='form-control lastname' ) }}
                             </div>
                         </div>
                         <div class="form-row">
-                            <div class="col-lg-8 col-md-8 mb-6">
+                            <div class="col-lg-9 col-md-12 mb-12 offset-1 float-md-center">
                                 {{ show_field(formRegister.email, class='form-control email' ) }}
                             </div>
                         </div>
                         <div class="form-row">
-                            <div class="col-md-4 mb-3">
-                                {{ show_field(formRegister.password, class='form-control') }}
+                            <div class="col-md-5 mb-12 offset-1 float-md-center">
+                                {{ show_field(formRegister.password, class='form-control password') }}
                             </div>
-                            <div class="col-md-4 mb-3">
+
+                            <div class="col-md-5 mb-12">
                                 {{ show_field(formRegister.confirm, class='form-control') }}
                             </div>
                         </div>
-                        {{ show_submit_field(formRegister.submit , class='btn btn-success') }}
+                        <hr />
+                        {{ show_submit_field(formRegister.submitRegister , class='btn btn-create') }}
                     </form>
                 </div>
             </div>
