--- a/templates/cont_event.html
+++ b/templates/cont_event.html
@@ -1,4 +1,4 @@
-{% from "macro.html" import comments %}
+{% from "macro.html" import show_comment %}
 {% extends "index.html" %}
 {% block contenido %}
 <div class="container-fluid">
@@ -7,9 +7,9 @@
             <div class="jumbotron">
                 <div class="row">
                     <div class="col-lg-6 col-md-12 col-sm-12">
-                        <h1 class="display-4">{{event["titulo"]}}</h1>
+                        <h1 class="display-4">{{particular_event["nombre"]}}</h1>
                         <img src="{{url_for('static',filename='Imagenes/Event2.jpg')}}" alt="EVENT" class="img-event">
-                        <p class="lead">{{event["descripcion"]}}</p>
+                        <p class="lead">{{particular_event["descripcion"]}}</p>
                         {% if user=='log' %}
                         <a class="btn btn-light btn-lg btn-ce" href="#" role="button">Comprar Entradas</a>
                         {% endif %}
@@ -17,13 +17,13 @@
                     <div class="col-lg-6 col-md-6 col-sm-6">
                         <div class="row">
                             <div class="col-lg-12 col-md-12 col-sm-12">
-                                <p class="fecha"><img src="{{url_for('static',filename='Imagenes/calendario.png')}}" class="imgcalen"> Fecha: {{event["fecha"]}}</p>
+                                <p class="fecha"><img src="{{url_for('static',filename='Imagenes/calendario.png')}}" class="imgcalen"> Fecha: {{particular_event["fecha"]}}</p>
                             </div>
                         </div>
 
                         <div class="row">
                             <div class="col-lg-12 col-md-12 col-sm-12">
-                                <p class="fecha"><img src="{{url_for('static',filename='Imagenes/placeholder_A4_Rectangle_29_pattern.png')}}" class="imgcalen">Lugar: {{event["lugar"]}}</p>
+                                <p class="fecha"><img src="{{url_for('static',filename='Imagenes/placeholder_A4_Rectangle_29_pattern.png')}}" class="imgcalen">Lugar: {{particular_event["lugar"]}}</p>
                             </div>
                         </div>
 
@@ -35,8 +35,8 @@
                         <div class="row">
                             <div class="col-lg-12 col-md-12 col-sm-12">
                                 <div class="jumbotron" id="segundo">
-                                    {% for event in listcomment %}
-                                        {{ comments(event) }}
+                                    {% for particular_event in list_comment %}
+                                        {{ show_comment(particular_event) }}
                                     {% endfor %}
                                 </div>
                             </div>
