--- a/templates/create_event.html
+++ b/templates/create_event.html
@@ -29,6 +29,17 @@
                                 </div>
 
                                 <div class="row">
+                                    <div class="form-group col-sm-6">
+                                        {{ show_field(formCreate.options, class="form-control",placeholder='Tipo de evento') }}
+
+                                    </div>
+                                    <div class="form-group col-sm-6">
+                                        {{ show_field(formCreate.timeEvent, class='form-control', placeholder='Ingrese hora del evento' ) }}
+
+                                    </div>
+                                </div>
+
+                                <div class="row">
                                     <div class="col-lg-6 col-md-5 col-sm-4">
                                         <p class="fecha"><img src="{{ url_for('static',filename='Imagenes/speech-bubble.png') }}" class="imgcalen">
                                             Comentarios
