--- a/templates/macro.html
+++ b/templates/macro.html
@@ -36,10 +36,13 @@
 {% endmacro %}
 
 
-{% macro comments(comment) %}
+{% macro show_comment(comment) %}
 <div class="row">
     <div class="col-lg-12 col-md-12 col-sm-12">
-        <p class="comen1"><img src="{{url_for('static',filename='Imagenes/graduate.png')}}" align="left" class="imgcomen"><b>{{comment["nombre"]}}: </b>{{comment["comentario"]}} </p>
+        <p class="comen1">
+            <img src="{{url_for('static',filename='Imagenes/graduate.png')}}" align="left" class="imgcomen">
+            <b>{{comment.user.nombre}} {{ comment.user.apellido }}: </b>{{ comment.contenido }}
+        </p>
     </div>
-</div>   
+</div>
 {% endmacro %}
