--- a/templates/create_event.html
+++ b/templates/create_event.html
@@ -31,11 +31,11 @@
                                 <div class="row">
                                     <div class="form-group col-sm-6">
                                         {{ show_field(formCreate.options, class="form-control",placeholder='Tipo de evento') }}
-
                                     </div>
+                                </div>
+                                <div class="row">
                                     <div class="form-group col-sm-6">
                                         {{ show_field(formCreate.timeEvent, class='form-control', placeholder='Ingrese hora del evento' ) }}
-
                                     </div>
                                 </div>
 
