--- a/templates/event_edit.html
+++ b/templates/event_edit.html
@@ -5,36 +5,58 @@
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12">
                 <div class="jumbotron">
-                    <form method="POST" action="{{ url_for('new_event') }}" enctype="multipart/form-data">
+                    <form method="POST" action="{{ url_for('update_event', eventId=eventUpdate.eventoId) }}"
+                          enctype="multipart/form-data">
                         <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
                         <div class="row">
                             <div class="col-lg-6 col-md-6 col-sm-6">
                                 {{ show_field(formCreate.nameEvent, class='form-control' ) }}
                                 <div class="form-group">
-                                    {{ show_field(formCreate.image, class='form-control-file' ) }}
+                                    <img class="img_update"
+                                         src="{{ url_for('static', filename='Imagenes/'+ formCreate.image.data) }} "
+                                         alt="">
                                 </div>
                                 {{ show_field(formCreate.description, class='form-control' ) }}
                             </div>
                             <div class="col-lg-6 col-md-12 col-sm-12">
                                 <div class="row">
                                     <div class="col-lg-4 col-md-4 col-sm-4">
-                                            {{ show_field(formCreate.dateEvent, class='form-control' ) }}
+                                        {{ show_field(formCreate.dateEvent, class='form-control' ) }}
                                     </div>
                                 </div>
-
                                 <div class="row">
                                     <div class="col-lg-4 col-md-4 col-sm-4">
                                         {{ show_field(formCreate.place, class='form-control' ) }}
                                     </div>
                                 </div>
-
                                 <div class="row">
-                                    <div class="col-lg-6 col-md-5 col-sm-4">
-                                        <p class="fecha"><img src="{{ url_for('static',filename='Imagenes/speech-bubble.png') }}" class="imgcalen">
-                                            Comentarios
-                                        </p>
+                                    <div class="form-group col-sm-6">
+                                        {{ show_field(formCreate.options, class="form-control",placeholder='Tipo de evento') }}
                                     </div>
                                 </div>
+                                <div class="row">
+                                    <div class="form-group col-sm-6">
+                                        {{ show_field(formCreate.timeEvent, class='form-control', placeholder='Ingrese hora del evento' ) }}
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-lg-12 col-md-12 col-sm-12">
+                                        <p class="fecha"><img
+                                                src="{{ url_for('static',filename='Imagenes/speech-bubble.png') }}"
+                                                class="imgcalen"> Comentarios</p>
+                                    </div>
+                                </div>
+
+                                <div class="row">
+                                    <div class="col-lg-12 col-md-12 col-sm-12">
+                                        <div class="jumbotron" id="segundo">
+                                            {% for eventUpdate in list_comment %}
+                                                {{ show_comment(eventUpdate.eventoId) }}
+                                            {% endfor %}
+                                        </div>
+                                    </div>
+                                </div>
+
                                 {{ show_submit_field(formCreate.update, class='btn btn-success') }}
                             </div>
                         </div>
@@ -42,6 +64,5 @@
                 </div>
             </div>
         </div>
-    </div>
     </div>
 {% endblock %}
