--- a/static/CSS/estilocrear.css
+++ b/static/CSS/estilocrear.css
@@ -255,5 +255,13 @@
         border-radius: 30px;
         background-color: rgba(255, 255, 255);
     }
+    .img_update{
+        width:800px;
+        height: 400px;
+        margin-left:20px;
+        margin-top: 20px;
+        border-radius: 25px;
+
+    }
 
 }
