--- a/templates/admin_event.html
+++ b/templates/admin_event.html
@@ -1,4 +1,5 @@
 {% from "macro.html" import event_admin %}
+{% from "form_macros.html" import show_field ,show_radio_field, show_submit_field, show_field_filter %}
 {% extends "index.html" %}
 {% block contenido %}
    <div class="container-fluid">
