--- a/static/CSS/estilocrear.css
+++ b/static/CSS/estilocrear.css
@@ -256,12 +256,16 @@
         background-color: rgba(255, 255, 255);
     }
     .img_update{
-        width:800px;
-        height: 400px;
+        width:500px;
+        height: 300px;
         margin-left:20px;
         margin-top: 20px;
         border-radius: 25px;
 
+    }
+    .create-event{
+        position: relative;
+        left:250px;
     }
 
 }
