--- a/templates/cont_event.html
+++ b/templates/cont_event.html
@@ -1,64 +1,81 @@
 {% from "macro.html" import show_comment %}
+{% from "form_macros.html" import show_field ,show_radio_field, show_submit_field %}
 {% extends "index.html" %}
 {% block contenido %}
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-lg-12 col-md-12 col-sm-12">
-            <div class="jumbotron">
-                <div class="row">
-                    <div class="col-lg-6 col-md-12 col-sm-12">
-                        <h1 class="display-4">{{particular_event["nombre"]}}</h1>
-                        <img src="{{url_for('static',filename='Imagenes/Event2.jpg')}}" alt="EVENT" class="img-event">
-                        <p class="lead">{{particular_event["descripcion"]}}</p>
-                        {% if user=='log' %}
-                            <a class="btn btn-light btn-lg btn-ce" href="#" role="button">Comprar Entradas</a>
-                        {% endif %}
-                    </div>
-                    <div class="col-lg-6 col-md-6 col-sm-6">
-                        <div class="row">
-                            <div class="col-lg-12 col-md-12 col-sm-12">
-                                <p class="fecha"><img src="{{url_for('static',filename='Imagenes/calendario.png')}}" class="imgcalen"> Fecha: {{particular_event["fecha"]}}</p>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-8 col-md-8 col-sm-8 offset-2 float-md-center">
+                <div class="jumbotron">
+                    <div class="row">
+                        <div class="col-lg-6 col-md-12 col-sm-12 ">
+                            <h1 class="display-4">{{ particular_event["nombre"] }}</h1>
+                            <img src="{{ url_for('static',filename='Imagenes/Event2.jpg') }}" alt="EVENT"
+                                 class="img-event">
+                            <p class="lead">{{ particular_event["descripcion"] }}</p>
+                            {% if user=='log' %}
+                                <a class="btn btn-light btn-lg btn-ce" href="#" role="button">Comprar Entradas</a>
+                            {% endif %}
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-6">
+                            <div class="row">
+                                <div class="col-lg-12 col-md-12 col-sm-12">
+                                    <p class="fecha"><img
+                                            src="{{ url_for('static',filename='Imagenes/calendario.png') }}"
+                                            class="imgcalen"> Fecha: {{ particular_event["fecha"] }}</p>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-lg-12 col-md-12 col-sm-12">
+                                    <p class="fecha"><img
+                                            src="{{ url_for('static',filename='Imagenes/placeholder.png') }}"
+                                            class="imgcalen">Lugar: {{ particular_event["lugar"] }}</p>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="form-group col-sm-6">
+                                    <p class="fecha"><img
+                                        src="{{ url_for('static',filename='Imagenes/eventos.png') }}"
+                                        class="imgcalen">Tipo:{{ particular_event["tipo"] }}</p>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="form-group col-sm-6">
+                                    <p class="fecha"><img src="{{ url_for('static',filename='Imagenes/clock.png') }}"
+                                    class="imgcalen">Hora:{{ particular_event["hora"] }}</p>
+                                </div>
                             </div>
                         </div>
 
                         <div class="row">
-                            <div class="col-lg-12 col-md-12 col-sm-12">
-                                <p class="fecha"><img src="{{url_for('static',filename='Imagenes/placeholder_A4_Rectangle_29_pattern.png')}}" class="imgcalen">Lugar: {{particular_event["lugar"]}}</p>
-                            </div>
-                        </div>
-
-                        <div class="row">
-                            <div class="form-group col-sm-6">
-                                <p class="fecha">Tipo: {{particular_event["tipo"]}}</p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="form-group col-sm-6">
-                                <p class="fecha">Hora: {{ particular_event["hora"] }}</p>
-                            </div>
-                        </div>
-
-                        <div class="row">
-                            <div class="col-lg-12 col-md-12 col-sm-12">
-                                <p class="fecha"><img
-                                        src="{{ url_for('static',filename='Imagenes/speech-bubble.png') }}"
-                                        class="imgcalen"> Comentarios</p>
-                            </div>
-                        </div>
-
-                        <div class="row">
-                            <div class="col-lg-12 col-md-12 col-sm-12">
+                            <div class="col-lg-10 col-md-10 col-sm-10 offset-1 float-md-center">
                                 <div class="jumbotron" id="segundo">
+
                                     {% for particular_event in list_comment %}
-                                        {{ show_comment(particular_event) }}
+                                        {{ show_comment(particular_event,user) }}
                                     {% endfor %}
+                                    {% if user == "Log" %}
+                                        <div class="comentarios">
+                                        <div class="nombUsuario ingresarComentario">
+                                            <p>Ingresar Comentario</p>
+                                        </div>
+                                        <form method="POST"
+                                              action="{{ url_for('event_user', eventId=particular_event.eventoId) }}">
+                                            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+                                            <div class="comentUsuario">
+                                                {{ show_field(formComment.commentEvent, class='form-control comentario', placeholder='Comente aquí!' ) }}
+                                                {{ show_submit_field(formComment.submit , class='btn btn-sm btn-block btn-registro') }}
+                                            </div>
+                                        </form>
+                                    {% endif %}
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
             </div>
         </div>
     </div>
-</div>
+
 {% endblock %}
