--- a/templates/event_edit.html
+++ b/templates/event_edit.html
@@ -3,7 +3,7 @@
 {% block contenido %}
     <div class="container-fluid">
         <div class="row">
-            <div class="col-lg-12 col-md-12 col-sm-12">
+            <div class="col-lg-8 col-md-8 col-sm-8 offset-2 float-md-center">
                 <div class="jumbotron">
                     <form method="POST" action="{{ url_for('update_event', eventId=eventUpdate.eventoId) }}"
                           enctype="multipart/form-data">
@@ -20,49 +20,32 @@
                             </div>
                             <div class="col-lg-6 col-md-12 col-sm-12">
                                 <div class="row">
-                                    <div class="col-lg-4 col-md-4 col-sm-4">
+                                    <div class="col-lg-4 col-md-4 col-sm-4 offset-2 float-md-center">
                                         {{ show_field(formCreate.dateEvent, class='form-control' ) }}
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-lg-4 col-md-4 col-sm-4">
+                                    <div class="col-lg-4 col-md-4 col-sm-4 offset-2 float-md-center">
                                         {{ show_field(formCreate.place, class='form-control' ) }}
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <div class="form-group col-sm-6">
+                                    <div class="form-group col-sm-6 offset-2 float-md-center">
                                         {{ show_field(formCreate.options, class="form-control",placeholder='Tipo de evento') }}
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <div class="form-group col-sm-6">
+                                    <div class="form-group col-sm-6 offset-2 float-md-center">
                                         {{ show_field(formCreate.timeEvent, class='form-control', placeholder='Ingrese hora del evento' ) }}
                                     </div>
                                 </div>
-                                <div class="row">
-                                    <div class="col-lg-12 col-md-12 col-sm-12">
-                                        <p class="fecha"><img
-                                                src="{{ url_for('static',filename='Imagenes/speech-bubble.png') }}"
-                                                class="imgcalen"> Comentarios</p>
-                                    </div>
-                                </div>
-
-                                <div class="row">
-                                    <div class="col-lg-12 col-md-12 col-sm-12">
-                                        <div class="jumbotron" id="segundo">
-                                            {% for eventUpdate in list_comment %}
-                                                {{ show_comment(eventUpdate.eventoId) }}
-                                            {% endfor %}
-                                        </div>
-                                    </div>
-                                </div>
-
-                                {{ show_submit_field(formCreate.update, class='btn btn-success') }}
+                                {{ show_submit_field(formCreate.update, class='btn btn-success create-event') }}
                             </div>
                         </div>
                     </form>
                 </div>
             </div>
         </div>
+    </div>
     </div>
 {% endblock %}
