--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
 
 </head>
 <!--------------------------------------NAVBAR------------------------------------------------------------>
-<nav class="navbar navbar-expand-lg navbar-light " style="background-color: rgba(185,35,245)";  role="navigation">
+<nav class="navbar navbar-expand-lg navbar-light " style="background-color: rgba(185,35,245)" ; role="navigation">
     <a class="navbar-brand" href="{{ url_for('index') }}"><img
             src="{{ url_for('static',filename='Imagenes/vengadores.png') }}" class="logo" alt="logo"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
@@ -33,7 +33,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-            {% if user=='Log' %}
+            {% if current_user.is_authenticated %}
                 <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('new_event') }}">Crear Evento</a>
                 </li>
@@ -41,25 +41,27 @@
                     <a class="nav-link" href="{{ url_for('my_event') }}">Mis Eventos</a>
                 </li>
             {% endif %}
-        {% if user=='admin' %}
+            {% if current_user.is_authenticated.admin %}
                 <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('events_admin') }}">Eventos</a>
                 </li>
             {% endif %}
         </ul>
-        {% if user=='noLog' %}
+        {% if not current_user.is_authenticated %}
             <a href="{{ url_for('register') }}" class="btn boton-regis" role="button"
                aria-pressed="true">Registrarse</a>
             <a href="{{ url_for('login') }}" class="btn boton-regis" role="button" aria-pressed="true">Iniciar
                 Sesión</a>
-
-        {% elif user=='Log' %}
+        {% elif current_user.is_authenticated %}
             <li>
                 <img src="{{ url_for('static',filename='Imagenes/boy.png') }}" alt="users" class="img-user">
             </li>
-            <li class="nomb-user"><h6>{{ user.nombre }} {{ user.apellido }}</h6></li>
-             <button class="btn btn-cerrarSesion" type="submit">Cerrar Sesion</button>
-        {% elif user=='admin' %}
+            <li class="nomb-user"><h6>{{ current_user.nombre }} {{ current_user.apellido }}</h6></li>
+            <a href="{{ url_for('logout') }}">
+                <button class="btn btn-cerrarSesion" type="button">Cerrar Sesion</button>
+            </a>
+        {% endif %}
+        {% if  current_user.is_authenticated.admin == 1 %}
             <li>
                 <img src="{{ url_for('static',filename='Imagenes/boss.png') }}" alt="users" class="img-user">
             </li>
