--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,7 @@
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4">
             <div class="jumbotron" id="jumbo-login">
-                <form method="POST" action="{{ url_for('loginuser') }}" enctype="multipart/form-data">
+                <form method="POST" action="{{ url_for('login') }}" enctype="multipart/form-data">
                     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
                     <h1 class="title-login">Iniciar Sesion</h1>
                     <hr />
