--- a/templates/macro.html
+++ b/templates/macro.html
@@ -1,3 +1,4 @@
+
 {% macro show_event(event) %}
     <div class=" col-lg-4 col-md-6 col-sm-6">
             <div class="card">
@@ -5,7 +6,7 @@
                 <div class="card-body">
                     <h5 class="card-title">{{ event["nombre"] }}</h5>
                     <p class="card-text">{{ event["descripcion"] }} </p>
-                    <a href="{{ url_for('event',id=event['eventoId']) }}" class="btn btn-link link-card">Ver más...</a>
+                    <a href="{{ url_for('event',eventId=event['eventoId']) }}" class="btn btn-link link-card">Ver más...</a>
                 </div>
             </div>
     </div>
@@ -96,19 +97,19 @@
     {% endif %}
 
 {% endmacro %}
-{% macro show_comment(comment,user) %}
+{% macro show_comment(comment) %}
     <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12">
             <p class="comen1">
-                {% if user=="admin" %}
+                <img src="{{ url_for('static',filename='Imagenes/graduate.png') }}" align="left" class="imgcomen">
+                <b>{{ comment.user.nombre }} {{ comment.user.apellido }}: </b>{{ comment.contenido }}
+                {% if current_user.is_authenticated.admin %}
                     <a href="{{ url_for('delete_comment_admin', eventId = comment["comentarioId"]) }}"><img
                             src="{{ url_for('static',filename='Imagenes/empty-tash-can.png') }}" class="editar">
                         <span class="icon-cross iconStyle"></span>
                         </button>
                     </a>
                 {% endif %}
-                <img src="{{ url_for('static',filename='Imagenes/graduate.png') }}" align="left" class="imgcomen">
-                <b>{{ comment.user.nombre }} {{ comment.user.apellido }}: </b>{{ comment.contenido }}
             </p>
         </div>
         <hr>
