--- a/templates/cont_myevent.html
+++ b/templates/cont_myevent.html
@@ -9,9 +9,9 @@
                 <h1 class="display-4" align="center">Mis Eventos</h1>
                 <div class="row">
                     {% for event in listevent %}
-                        {% if current_user.is_authenticated %}
+                        {% if current_user.is_authenticated and current_user.admin == False %}
                             {{ my_event(event) }}
-                        {% elif current_user.is_authenticated.admin %}
+                        {% elif current_user.is_authenticated and current_user.admin == True %}
                             {{ events_admin(event) }}
                         {% endif %}
                     {% endfor %}
