--- a/templates/macro.html
+++ b/templates/macro.html
@@ -12,8 +12,6 @@
     </div>
 {% endmacro %}
 
-
-
 {% macro my_event(event) %}
         <div class="col-6 col-md-3 border-caja">
             <div class="text-center">
@@ -29,14 +27,14 @@
         <div class="col-4 col-md-2 border-caja">
             <div class="icons">
                 <a href="{{ url_for('update_event', eventId= event.eventoId) }}"><img
-                        src="{{ url_for('static',filename='Imagenes/refresh.png') }}" class="editar">
+                        src="{{ url_for('static',filename='Imagenes/edit.png') }}" class="editar">
                 </a>
             </div>
         </div>
         <div class="col-4 col-md-2 border-caja">
             <div class="icons">
                 <a href="{{ url_for('delete_event', eventId = event.eventoId) }}"><img
-                        src="{{ url_for('static',filename='Imagenes/empty-tash-can.png') }}" class="editar">
+                        src="{{ url_for('static',filename='Imagenes/garbage.png') }}" class="editar">
                     <span class="icon-cross iconStyle"></span>
                     </button>
                 </a>
@@ -59,14 +57,14 @@
     <div class="col-2 col-md-2 border-caja">
         <div class="icons">
             <a href="{{ url_for('update_event', eventId= event.eventoId) }}"><img
-                    src="{{ url_for('static',filename='Imagenes/refresh.png') }}" class="editar">
+                    src="{{ url_for('static',filename='Imagenes/edit.png') }}" class="editar">
             </a>
         </div>
     </div>
     <div class="col-2 col-md-2 border-caja">
         <div class="icons">
             <a href="{{ url_for('delete_event_admin', eventId = event.eventoId) }}"><img
-                    src="{{ url_for('static',filename='Imagenes/empty-tash-can.png') }}" class="editar">
+                    src="{{ url_for('static',filename='Imagenes/garbage.png') }}" class="editar">
                 <span class="icon-cross iconStyle"></span>
                 </button>
             </a>
@@ -78,7 +76,7 @@
         <div class="col-4 col-md-2 border-caja">
             <div class="icons">
                 <a href="{{ url_for('event_disapprove', eventId = event.eventoId) }}"><img
-                        src="{{ url_for('static',filename='Imagenes/approve.png') }}" data-toggle="tooltip" data-placement="top" title="Aprobado" class="editar">
+                        src="{{ url_for('static',filename='Imagenes/checked(1).png') }}" data-toggle="tooltip" data-placement="top" title="Aprobado" class="editar">
                     <span class="icon-cross iconStyle"></span>
                     </button>
                 </a>
@@ -88,14 +86,13 @@
         <div class="col-4 col-md-2 border-caja">
             <div class="icons">
                 <a href="{{ url_for('event_approve', eventId = event.eventoId) }}"><img
-                        src="{{ url_for('static',filename='Imagenes/disapprove.png') }}" data-toggle="tooltip" data-placement="top" title="Desaprobado" class="editar">
+                        src="{{ url_for('static',filename='Imagenes/cancel.png') }}" data-toggle="tooltip" data-placement="top" title="Desaprobado" class="editar">
                     <span class="icon-cross iconStyle"></span>
                     </button>
                 </a>
             </div>
         </div>
     {% endif %}
-
 {% endmacro %}
 {% macro show_comment(comment) %}
     <div class="row">
@@ -103,9 +100,9 @@
             <p class="comen1">
                 <img src="{{ url_for('static',filename='Imagenes/graduate.png') }}" align="left" class="imgcomen">
                 <b>{{ comment.user.nombre }} {{ comment.user.apellido }}: </b>{{ comment.contenido }}
-                {% if current_user.is_authenticated.admin %}
+                {% if current_user.is_authenticated and current_user.admin == True %}
                     <a href="{{ url_for('delete_comment_admin', eventId = comment["comentarioId"]) }}"><img
-                            src="{{ url_for('static',filename='Imagenes/empty-tash-can.png') }}" class="editar">
+                            src="{{ url_for('static',filename='Imagenes/garbage.png') }}" class="editar">
                         <span class="icon-cross iconStyle"></span>
                         </button>
                     </a>
